--- a/game/build.gradle
+++ b/game/build.gradle
@@ -58,7 +58,7 @@ configure(subprojects) {
 
 subprojects {
   version = '$projectVersion'
-  ext.appName = 'practice'
+  ext.appName = 'game'
   repositories {
     mavenCentral()
     maven { url 'https://s01.oss.sonatype.org' }
@@ -70,4 +70,4 @@ subprojects {
   }
 }
 
-eclipse.project.name = 'practice' + '-parent'
+eclipse.project.name = 'game' + '-parent'
