--- a/game/build.gradle
+++ b/game/build.gradle
@@ -16,28 +16,12 @@ allprojects {
   apply plugin: 'eclipse'
   apply plugin: 'idea'
 
-  version = '0.1.0'
-
   // This allows you to "Build and run using IntelliJ IDEA", an option in IDEA's Settings.
   idea {
     module {
       outputDir file('build/classes/java/main')
       testOutputDir file('build/classes/java/test')
     }
-  }
-
-  repositories {
-    mavenCentral()
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-    maven { url "https://oss.sonatype.org/content/repositories/releases/" }
-  }
-}
-
-project(":core") {
-  apply plugin: "java"
-
-  dependencies {
-    implementation "com.badlogicgames.ashley:ashley:1.7.3"
   }
 }
 
@@ -79,10 +63,9 @@ subprojects {
     // You may want to remove the following line if you have errors downloading dependencies.
     mavenLocal()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
-    maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
     maven { url 'https://jitpack.io' }
   }
 }
 
-eclipse.project.name = 'game' + '-parent'
+eclipse.project.name = 'recycleIt' + '-parent'
